# ate

./: Cargo.toml  LICENSE  README.md  blah  flake.nix  six_lines
.github/workflows/: ci.yml
examples/: graphemes.rs
opener_examples/: code_opener.bash  nvim_opener.bash  vim_opener.bash
src/: doc.rs  main.rs  state.rs  ui.rs
src/widgets/: README.md  layout.rs  mod.rs
