[package]
name = "ate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
atty = "0.2.14"
chrono = "0.4.22"
fern = { version = "0.6.1", features = ["chrono"] }
finl_unicode = "1.1.0"
log = "0.4.17"
termwiz = { version = "0.18.0", features = ["widgets"] }
xdg = "2.4.1"
