[package]
name = "ate-pager"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "It paginates and navigates"
homepage = "https://github.com/groves/ate"
repository = "https://github.com/groves/ate"
categories = ["command-line-utilities"]
keywords = ["terminal"]

[dependencies]
anyhow = "1.0.65"
atty = "0.2.14"
backtrace = "0.3"
cassowary = "0.3"
chrono = "0.4.22"
fern = { version = "0.6.1", features = ["chrono"] }
finl_unicode = "1.1.0"
fnv = "1.0"
log = "0.4.17"
termwiz = "0.19"
xdg = "2.4.1"

[[bin]]
name = "ate"
path = "src/main.rs"
